Fix button spacing/size on the page header

--- a/client/components/page-header/page-header.scss
+++ b/client/components/page-header/page-header.scss
@@ -9,6 +9,11 @@
     text-align: center;
   }
 
+  .Button {
+    display: flex;
+    align-items: center;
+  }
+
   :nth-child(3) {
     text-align: right;
   }
